@@ -1,24 +1,26 @@
-package Pretraitement;
-import model.Nom;
+package pretraitement;
 
-import java.text.Normalizer;
+import model.Nom;
 import java.util.Arrays;
 import java.util.List;
-import java.util.regex.Pattern;
 
-public class Nettoyeur implements Pretraitement{
+public class Nettoyeur implements Pretraitement {
+
     @Override
     public List<String> traiter(Nom nom) {
         String texte = nom.getNomBrut()
-                .replaceAll("[^\\p{L}\\s]", "")   // garde uniquement lettres + espaces
+                .replaceAll("[^\\p{L}\\s]", "")
                 .replaceAll("\\s+", " ")
                 .trim()
                 .toLowerCase();
-        return split(texte);
+
+        return decouper(texte);
     }
 
-    private List<String> split(String s) {
-        if (s.isBlank()) return List.of();
-        return Arrays.asList(s.split("\\s+"));
+    private List<String> decouper(String texte) {
+        return texte.isBlank() ? List.of() : Arrays.asList(texte.split("\\s+"));
     }
 }
+
+
+
